--- a/contact_us.html
+++ b/contact_us.html
@@ -8,7 +8,7 @@
     />
     <title>Spyinte ch</title>
 
-    <link rel="shortcut icon" href="assets/images/fav.jpg" />
+     <link rel="shortcut icon" href="assets/images/logo (2).png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/fontawsom-all.min.css" />
     <link
