--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no">
     <title> Spyinte ch </title>
 
-    <link rel="shortcut icon" href="assets/images/fav.jpg">
+     <link rel="shortcut icon" href="assets/images/logo (2).png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawsom-all.min.css">
     <link rel="stylesheet" href="assets/plugins/image-hover/imagehover.min.css">
